--- a/data/filters/pedestrians.yml
+++ b/data/filters/pedestrians.yml
@@ -6,6 +6,7 @@
 - image: sign/pedestrian/4.png
   isos: bg,no,se
 - image: sign/pedestrian/5.png
-  isos: fr,fi,hr,it,lv,mk,nl,pt,ro,rs,si,sk
+  isos: al,at,be,ch,de,dk,es,fr,fi,gr,hr,hu,is,it,lu,lv,me,mk,nl,pt,ro,rs,si,sk
+#  isos: fr,fi,hr,it,lv,mk,nl,pt,ro,rs,si,sk
 - image: sign/pedestrian/es.png
   isos: ch,es
