--- a/data/filters/polls.yml
+++ b/data/filters/polls.yml
@@ -1,17 +1,19 @@
 ---
 - svg: [poll1, black, white]
-  isos: ae,bh,lk,lv,mt,pe,th,uy
+  isos: ae,bh,ie,lk,lv,mt,nl,pe,th,uy
 - svg: [poll1, black, gold]
-  isos: co
-- image: poll/ee.png
-  isos: ee,fi
-- image: poll/se.png
-  isos: fi,se
-- image: poll/no.png
-  isos: "no"
-- image: poll/hr.png
-  isos: ch,hr,me,si
+  isos: ch,co,hr,me,no,si
+- svg: [poll1, "#037bfc", white]
+  isos: ee,fi,se
+#- image: poll/ee.png
+#  isos: ee,fi
+#- image: poll/se.png
+#  isos: fi,se
+#- image: poll/no.png
+#  isos: "no"
+#- image: poll/hr.png
+#  isos: ch,hr,me,si
 - image: poll/nl.png
   isos: be,nl,pl
 - image: poll/lv.png
-  isos: ee,lv,sk
+  isos: de,ee,lv,sk
