--- a/data/filters/regions.yml
+++ b/data/filters/regions.yml
@@ -17,7 +17,7 @@
 - name: Central
   isos: at,cz,hu,pl,sk,si
 - name: Nordic
-  isos: is,dk,ee,fi,no,se,lt,lv
+  isos: ca,is,dk,ee,fi,no,se,lt,lv
 - name: Mediterranean
   isos: al,il,it,gr,me,mk,pt,rs
 - name: Latin America
