--- a/data/filters/polls.yml
+++ b/data/filters/polls.yml
@@ -1,6 +1,6 @@
 ---
 - svg: [poll1, black, white]
-  isos: ae,bh,ie,lk,lv,mt,nl,pe,th,uy
+  isos: ae,bh,ie,lk,lv,mt,my,nl,pe,th,uy
 - svg: [poll1, black, gold]
   isos: ch,co,hr,me,no,si
 - svg: [poll1, "#037bfc", white]
@@ -16,4 +16,4 @@
 - image: poll/nl.png
   isos: be,nl,pl
 - image: poll/lv.png
-  isos: de,ee,lv,sk
+  isos: cz,de,ee,lv,sk
