--- a/data/languages.yml
+++ b/data/languages.yml
@@ -47,7 +47,7 @@ groups:
   - name: Кириллица
     isos: bg,kg,mk,mn,rs,ru,ua
   - name: العربية
-    isos: ae,jo,il,tn
+    isos: ae,il,jo,my,tn
   - name: Other
     isos: bt,in,jp,kh,kr,il,lk,th
   - name: English usage
