css, data fixes, selected bollard autohide fix

--- a/data/filters/googlecars.yml
+++ b/data/filters/googlecars.yml
@@ -1,4 +1,6 @@
 ---
+- name: Pedestr. cam
+  isos: ae,ec,il,in,kg,kr,ph,tn,uy
 - title: White car 🚗
   fig: { type: car, color: white }
   isos: ae,bd,bo,br,bw,ca,cl,il,kh,ls,mk,my,pe,ph,ro,sz,ua,us
