--- a/sign/pedestrians.yml
+++ b/sign/pedestrians.yml
@@ -1,5 +1,8 @@
 ---
 filters:
+  - image2: sign/pedestrian/rs.png
+    isos: gr,mk,rs,si
+    level: 2
   - image2: sign/pedestrian/be.png
     isos: be,mk,pl,rs,si
   - image2: sign/pedestrian/3.png
@@ -7,10 +10,10 @@ filters:
   - image2: sign/pedestrian/4.png
     isos: bg,is,no,se
   - image2: sign/pedestrian/5.png
-    isos: al,at,be,ch,de,dk,es,fr,fi,gr,hr,hu,it,lu,lv,me,mk,nl,pt,ro,rs,si,sk
-  #  isos: fr,fi,hr,it,lv,mk,nl,pt,ro,rs,si,sk
+    isos: al,at,be,ch,de,dk,es,fr,fi,hr,hu,is,it,lu,lv,me,mk,nl,pt,ro,rs,si,sk
+#   isos: fr,fi,hr,it,lv,mk,nl,pt,ro,rs,si,sk
   - image2: sign/pedestrian/es.png
-    isos: ch,es
+    isos: ch,es.9,sk.1
 countries:
   be: {image2: sign/pedestrian/be.png}
   bg: {image2: sign/pedestrian/bg.png}
