--- a/data/languages.yml
+++ b/data/languages.yml
@@ -23,8 +23,8 @@ charsets:
   mt: "Ħħ ċġż"
   pl: "Łł ąę ż ćńóśź"
   tr: "çş ğ Iıİi ü âîû"
-  br: "áéíóú ãõ âàê ü"
-  pt: "áéíóú ãõ âàê ü"
+  br: "áéíóú ãõ âà êô ü ç"
+  pt: "áéíóú ãõ âà êô ü ç"
   ro: "ă âî șț şţ"
 
   cz: "ů ĎďŤť áéíóúý ěňř čšž"
