--- a/data/filters/polls.yml
+++ b/data/filters/polls.yml
@@ -1,10 +1,13 @@
 ---
 - svg: [poll1, black, white]
-  isos: ae,bh,ie,lk,lt,lv,mt,my,nl,pe,th,uy
+  isos: ae,bh,bt,ie,lk,lt,lv,mt,my,nl,pe,th,uy
+  group: poll
 - svg: [poll1, black, gold]
   isos: ch,co,hr,me,no,si
+  group: poll
 - svg: [poll1, "#037bfc", white]
   isos: ee,fi,se
+  group: poll
 #- image: poll/ee.png
 #  isos: ee,fi
 #- image: poll/se.png
@@ -17,6 +20,3 @@
   isos: be,nl,pl
 - image: poll/lv.png
   isos: cz,de,ee,lv,sk
-- name: Electrical poll with white paint at bottom
-  isos: br,ro
-  level: 3
