--- a/sign/pedestrians.yml
+++ b/sign/pedestrians.yml
@@ -10,7 +10,7 @@ filters:
   - image2: sign/pedestrian/4.png
     isos: bg,is,no,se
   - image2: sign/pedestrian/5.png
-    isos: al,at,be,ch,de,dk,es,fr,fi,hr,hu,is,it,lu,lv,me,mk,nl,pt,ro,rs,si,sk
+    isos: al,at,be,ch,cz,de,dk,es,fr,fi,hr,hu,is,it,lu,lv,me,mk,nl,pt,ro,rs,si,sk
 #   isos: fr,fi,hr,it,lv,mk,nl,pt,ro,rs,si,sk
   - image2: sign/pedestrian/es.png
     isos: ch,es.9,sk.1
