Move signs and road filters

--- a/data/filters/signs.yml
+++ b/data/filters/signs.yml
@@ -26,3 +26,24 @@
 - image: misc/sign_black_back.png
   isos: br.9, pe
   group: sign_caract
+
+- image: sign/nopark/white-lines.png
+  title: Sign have outside and inner white border
+  isos: al,bg,lv
+  level: 3
+  group: nopark
+
+- image: sign/nopark/dk.png
+  isos: dk,me
+  level: 3
+  group: nopark
+
+- title: Flat sign
+  image: sign/flat.png
+  isos: ae,at,bt,bw,ca,ch,de,dk,es,fi.2,gr,hu,ie,is,mx,my,no,nz,tr,ua,us,uy,za
+  group: sign_flatness
+
+- title: Not Flat sign
+  image: sign/not-flat.png
+  isos: al,be,bg,cz,de,ee,es,fr,fi.2,hr,it,lt,lu,me,mk,nl,pl,pt,ro,ru,se,si,sk,ua
+  group: sign_flatness
