--- a/data/filters/polls.yml
+++ b/data/filters/polls.yml
@@ -1,15 +1,15 @@
 ---
 - svg: [poll1, black, white]
   isos: ae,bh,bt,ie,lk,lt,lv,mt,my,nl,pe,th,uy
-  group: poll
+  group: road_artifact
 
 - svg: [poll1, black, gold]
   isos: ch,co,hr,me,no,si
-  group: poll
+  group: road_artifact
 
 - svg: [poll1, "#037bfc", white]
   isos: ee,fi,se
-  group: poll
+  group: road_artifact
 
 #- image: poll/ee.png
 #  isos: ee,fi
@@ -22,7 +22,9 @@
 
 - image: poll/nl.png
   isos: be,nl,pl
+  group: road_artifact
 
-- title: stripped red and white
+- title: Stripped red and white poll
   image: poll/lv.png
   isos: cz,de,dk,ee,lv,sk
+  group: road_artifact
