--- a/data/filters/roads.yml
+++ b/data/filters/roads.yml
@@ -17,27 +17,47 @@
 - image: road/uy.png
   title: Dashed Line inside 2 lines
   isos: ls,ph,sz,uy,za
+  group: road_artifact
 
 - image: road/dk.png
   isos: dk
+  group: road_artifact
 
 - image: road/no.png
   isos: be,no
   level: 3
+  group: road_artifact
 
 - image: road/se.png
   isos: fi,se
+  group: road_artifact
 
 - image: road/nz.png
   isos: nz
+  group: road_artifact
 
 - image: road/be.png
   level: 2
   isos: be,nl
+  group: road_artifact
 
 - image: road/comb.png
   level: 2
   isos: ee,no
+  group: road_artifact
 
 - image: road/long-space.png
   isos: se
+  group: road_artifact
+  
+- image: road/border-white-black.png
+  isos: ae,es,id,il,it.1,lk,lt,mk.1,my,ng,sg,si,th,za
+  group: road_artifact
+
+- image: road/border-yellow-black.png
+  isos: ae,gr
+  group: road_artifact
+
+- image: road/border-white-red.png
+  isos: il,mk,sk,tn
+  group: road_artifact
