--- a/data/toggles.yml
+++ b/data/toggles.yml
@@ -9,8 +9,8 @@
   key: pedestrian
 - image2: sign/residential/fi.svg
   key: residential
-- image2: sign/cycle/fr.svg
-  key: cycle
+#- image2: sign/cycle/fr.svg
+#  key: cycle
 - image: sign/circular/sk.png
   key: circular
 - image: sign/nopriority/hr.png
