--- a/data/filters/bollards.yml
+++ b/data/filters/bollards.yml
@@ -1,6 +1,9 @@
 ---
 - fig: { type: bollard, color: white, front: 1 }
   isos: al,ch,cz,de,ee,fi,gb,gr,hu,hr,il,it,lt,lv,lu,mk,pt,rs,ru,se,sk
+- fig: { type: bollard, color: black, back: 1 }
+  isos: 
+  level: 2
 - fig: { type: bollard, color: white, back: 1, circ: 1 }
   isos: ch.8,de.6,ee.8,es.6,fi.8,gb.3,il.3,lu.8,lv.8,no,pt.6,se.8
 - fig: { type: bollard_cz, front: 1 }
