--- a/data/filters/plates.yml
+++ b/data/filters/plates.yml
@@ -14,7 +14,7 @@
 
 - fig: { type: car_plate, content: back }
   title: Yellow Back Plate
-  isos: bw,co.9,dk.1,gb.7,gh,il.9,jp.6,ke,kr.1,lk,lu.9,nl.9,ug
+  isos: ae,bw,co.9,dk.1,gb.7,gh,il.9,jp.6,ke,kr.1,lk,lu.9,nl.9,ug
   level: 2
 
 - fig: { type: car_plate, color: green, color2: white }
